--- a/src/css/App.css
+++ b/src/css/App.css
@@ -29,9 +29,10 @@
 
 .appointment-list .apt-date {
   font-style: italic;
+  font-weight: 300;
 }
 
-.appointment-list .apt-notes {
+.appointment-list .company-notes {
   line-height: 120%;
 }
 
