--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,12 @@
 /**  Basic Page CSS **/
 body {
   font-weight: 200;
-  background-color: #27be27ad;
+  background-color: #12a30dad;
 }
 
-header a,
+header a {
+  color: white;
+}
 footer a {
   color: rgb(0, 4, 255);
 }
@@ -15,6 +17,6 @@ footer {
 
 .bg-primary,
 .btn-primary {
-  background-color: #27be27ad !important;
+  background-color: #12a30dad !important;
   border: inherit;
 }
